# cbundl

./: Cargo.toml  README.md  build.rs  cbundl.toml  flake.nix
.github/workflows/: ci.yaml
assets/: export.sh
src/: banner.rs  bundler.rs  cli.rs  config.rs  consts.rs  display.rs  formatter.rs  header.rs  main.rs  minify.rs  pipeline.rs  quotes.rs  quotes.txt  source.rs
src/config/: args.rs  file.rs  mod.rs
src/parse/: directive.rs  include.rs  mod.rs  source_file.rs
test/frob/: .gitignore  final.c  frob.c  frob.h  main.c
test/minify/: clean.c  unminified.c
