[package]
name = "cbundl"
version = "0.1.0"
authors = ["threadexio"]
edition = "2021"
description = "webpack but for C code."
readme = "README.md"
homrpage = "https://github.com/threadexio/cbundl"
repository = "https://github.com/threadexio/cbundl"
license = "Apache-2.0"
keywords = ["bundle", "c", "bundler", "code", "parser"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
const_format = "0.2.34"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
owo-colors = "4.1.0"
pathdiff = "0.2.3"
petgraph = "0.6.5"
thiserror = "2.0.8"

[build-dependencies]
chrono = "0.4.39"

[workspace.lints.rust]
arithmetic_overflow = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
cast_lossless = "warn"
cast_possible_wrap = "warn"
useless_conversion = "warn"
wrong_self_convention = "warn"
missing_assert_message = "warn"
unwrap_used = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
error_impl_error = "warn"
new_without_default = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
